Fri Jul 11 17:15:08 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/abbrev.rb: remove executable.

Fri Jul 11 16:45:39 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/fileutils.rb: handle ENOENT error with symlink targeted to
	  non-exists file. [ruby-dev:45933] [Bug #6716]

Fri Jul 11 15:59:42 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* array.c: Clarify documentation for Array#insert.
	  [ruby-core:62934] [Bug #9901]

Fri Jul 11 15:39:36 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* io.c: Improve Documentation by @dapplebeforedawn.
	  [fix GH-658] [ruby-core:63579] [Bug #10012]

Fri Jul 11 14:19:14 2014  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/matrix.rb: Fix sign for cross_product [#9499]

Fri Jul 11 11:11:50 2014  Koichi Sasada  <ko1@atdot.net>

	* benchmark/prepare_so_k_nucleotide.rb: use require_relative.

	* benchmark/prepare_so_reverse_complement.rb: ditto.

Fri Jul 11 10:09:03 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* pack.c (encodes): fix buffer overrun by tail_lf.  Thanks to
	  Mamoru Tasaka and Tomas Hoger.  [ruby-core:63604] [Bug #10019]

Thu Jul 10 23:51:36 2014  Naohisa Goto  <ngotogenome@gmail.com>

	* hash.c (ruby_setenv): Fix TestEnv#test_aset failure on Solaris 9.
	  When name contains '=', ruby_setenv raises Errno::EINVAL.
	  That is the same behavior as Solaris 10.
	  NULL check for malloc return value is also added.

Thu Jul 10 15:02:55 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_insnhelper.c (vm_callee_setup_keyword_arg): adjust VM stack
	  pointer to get rid of overwriting splat arguments by arguments
	  for `to_hash` conversion.  [ruby-core:63593] [Bug #10016]

Thu Jul 10 01:09:57 2014  Koichi Sasada  <ko1@atdot.net>

	* symbol.c: remove rb_gc_mark_symbols().

	  fstrings referred by static symbols and pinned dynamic symbols
	  are registered by rb_gc_register_mark_object().

	  fstring referred by dynamic symbols (not pinned symbols)